--- a/src/global.css
+++ b/src/global.css
@@ -1,4 +1,4 @@
-:root{
+:root {
   --white: #ffffff;
   --gray-100: #e1e1e6;
   --gray-300: #c4c4cc;
@@ -24,7 +24,10 @@ body {
   -webkit-font-smoothing: antialiased;
 }
 
-body, input, textarea, button {
+body,
+input,
+textarea,
+button {
   font-family: 'Roboto', sans-serif;
   font-weight: 400;
   font-size: 1rem;
